added basic services and enhanced some UI elements

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -27,3 +27,15 @@ body {
 }
 
 
+
+@layer components {
+  .iFlex-center {
+    @apply inline-flex justify-center items-center gap-2;
+
+  }
+
+  .flex-center {
+    @apply flex justify-center items-center gap-2;
+  }
+}
+
